My first Kvarts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>"Hello DevOps!"</title>
+        <title>"Hello DevOpsa and Kvarts!"</title>
     </head>
     <body>
         <h1>
