My second commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,29 @@
             <li>Ілан Доє</li>
             <li>Покурили маріхуанну і життя прекрасне</li>
         </ol>
-        
+        <p>
+            Після останнього тегу рило Кварца назавжди залишилось ось таким:
+        </p>
         <img src="Screenshot_1.png" alt="" />
+        <p>
+            З яким словом вам асоціюється Кварц?
+        </p>
+        <div>
+        <form action="#" method="post" enctype="multipart/form-data"></form>
+        </div>
+            <div>
+        <input type = "text" name = "username" value="" /> 
+        </div>
+            <div>
+            <p><input checked type = "radio" name = "Devops" value"CI/CD/CD" /> DevOps </p>
+            <p><input type = "radio" name = "Devops" value".NET" />C#</p>
+        </div>
+        <div>
+            <p><input type = "radio" name = "Devops2" value"CI/CD/CD" /> DevOps </p>
+            <p><input checked type = "radio" name = "Devops2" value".NET" />C#</p>
+        </div>
+        <div>
+            <p><input type = "checkbox" name = "Devops3" value"CI/CD/CD" /> У Нижника є мізки? </p>
+        </div>
     </body>
 </html>
