--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <p><input checked type = "radio" name = "Devops2" value".NET" />C#</p>
         </div>
         <div>
-            <p><input type = "checkbox" name = "Devops3" value"CI/CD/CD" /> У Нижника є мізки? </p>
+            <p>У Нижника є Мізки?</p>
+            <p><input type = "checkbox" name = "Devops3" value"CI/CD/CD" /> Так </p>
+            <p><input type= "checkbox" name = "DevOps " value"CI/CD/CD"/> Ні </p>
         </div>
     </body>
 </html>
